frontend/tests/cases/negative/graded/kind-mismatch.gr.output
Type checking failed: 
Kind error: frontend/tests/cases/negative/graded/kind-mismatch.gr:5:1:
Type `Coeffect` does not have expected kind `Coeffect`